--- a/latexFile.tex
+++ b/latexFile.tex
@@ -78,23 +78,23 @@
 
 %\begin{tabular}[h!]
 
-\parbox{2.35cm}{
+\parbox{2.3cm}{
 
 \includegraphics[width=2.25cm,clip]{iitg_logo.jpg}
 
 }
-\parbox{\dimexpr\linewidth-2.5cm\relax}{
+\parbox{\dimexpr\linewidth-2.3cm\relax}{
 
-\begin{tabular*}{\textwidth}{l@{\hskip 1.5cm}r}
+\textbf{\huge Gollapudi N Lakshmi Narayana}\\
+\begin{tabular*}{\textwidth}{l@{\hskip 1.25cm}r}
 
 %\textbf
 
-\textbf{\huge Gollapudi N Lakshmi Narayana}\\
-{Roll No. }&\href{mailto:}{ }\\
-{. -}& Mobile : \\
-{IITG}&\href{mailto:}{ }\\
-{} & \href{https://www./}{}
-
+{Roll No. 190101037}&\href{mailto:lakshminarayana822002@gmail.com}{ lakshminarayana822002@gmail.com}\\
+{B.Tech}& Mobile : 7416143007\\
+{Computer Science and Engineering}&\href{mailto:lakshminarayana822002@gmail.com}{ lakshminarayana822002@gmail.com}\\
+{Minor in Mathematics} & \href{https://www.linkedin.com/in/lakshmi-narayana-b04892194//}{https://www.linkedin.com/in/lakshmi-narayana-b04892194/}\\
+{IITG}&{}
 \end{tabular*}
 }
 %\end{tabular}
