--- a/latexFile.tex
+++ b/latexFile.tex
@@ -90,11 +90,11 @@
 
 %\textbf
 
-{Roll No. 190101037}&\href{mailto:lakshminarayana822002@gmail.com}{ lakshminarayana822002@gmail.com}\\
-{B.Tech}& Mobile : 7416143007\\
-{Computer Science and Engineering}&\href{mailto:lakshminarayana822002@gmail.com}{ lakshminarayana822002@gmail.com}\\
-{Minor in Mathematics} & \href{https://www.linkedin.com/in/lakshmi-narayana-b04892194//}{https://www.linkedin.com/in/lakshmi-narayana-b04892194/}\\
-{IITG}&{}
+{Roll No. 190101037}&\href{mailto:}{ }\\
+{B.Tech}& Mobile : \\
+{}&\href{mailto:}{ }\\
+{IITG} & \href{https://www.linkedin.com/in/lakshmi-narayana-b04892194//}{https://www.linkedin.com/in/lakshmi-narayana-b04892194/}
+
 \end{tabular*}
 }
 %\end{tabular}
