few more changes and bug fixes

--- a/latexFile.tex
+++ b/latexFile.tex
@@ -90,9 +90,9 @@
 
 %\textbf
 
-{Roll No. 190101037}&\href{mailto:}{ }\\
-{B.Tech}& Mobile : \\
-{}&\href{mailto:}{ }\\
+{Roll No. 190101037}&\href{mailto:lakshminarayana822002@gmail.com}{ lakshminarayana822002@gmail.com}\\
+{B.Tech}& Mobile : +917416143007\\
+{Computer Science and Engineering}&\href{mailto:gn@iitg.ac.in}{ gn@iitg.ac.in}\\
 {IITG} & \href{https://www.linkedin.com/in/lakshmi-narayana-b04892194//}{https://www.linkedin.com/in/lakshmi-narayana-b04892194/}
 
 \end{tabular*}
@@ -110,13 +110,14 @@
  \begin{tabu} to 1\textwidth { | X[c] | X[c] | X[c] | X[c]| }
  \hline   \textbf{Degree/Certificate} & \textbf{Institute/Board} & \textbf{CGPA/Percentage} & \textbf{Year} \\
  
-\hline B.Tech& & & \\
-\hline Senior secondary& & & \\
-\hline Secondary& & & \\
+\hline B.Tech& IITG& 9.3& 2023\\
+\hline Senior secondary& CBSE& 95& 2019\\
+\hline Secondary& CBSE& 10& 2017\\
 
 \hline
 \end{tabu}
 %---------- Education-----------------Ends----------------
+
 
 
 \vspace{4pt}
@@ -124,7 +125,17 @@
 
 %----------Projects-----------------Starts----------------
 \section{Projects}
+\resumeSubHeadingListStart
+
+\resumeSubheading{OpenResumes}{Ongoing}{Student Web Community, IITG}{\href{https://github.com/Lakshmi116/OpenResumes}{\textit{\small https://github.com/Lakshmi116/OpenResumes   }}}
+\begin{itemize}
+\item A website to build resumes based on IIT Guwahati template.
+
+ \end{itemize}
+\vspace{2pt}
+
   
+\resumeSubHeadingListEnd
 %----------Projects-----------------Ends----------------
 
 
@@ -134,9 +145,18 @@
 %----------Technical Skills-----------------Starts----------------
 \section{Technical Skills}
 
+ \resumeSubHeadingListStart
+ 
+\resumeSubItem{Programming Languages}{c++, python}
+\resumeSubItem{Web Technologies}{HTML, CSS, JavaScript}
+\resumeSubItem{DBMS}{MySQL}
+\resumeSubItem{OS}{Linux, Windows}
+\resumeSubItem{Miscelleneous}{AppD, WebD, Django}
+\resumeSubItem{Other Skills}{Machine Learning}
  
  \hfill * \textit{Elimentary Profficiency}
  
+ \resumeSubHeadingListEnd
  %----------Technical Skills-----------------Ends----------------
  
  
@@ -149,7 +169,13 @@
  \begin{multicols}{2}
  \begin{itemize}[leftmargin = *,itemsep=-3pt]
 
-\item null
+\item Data Structures and algorithms
+\item Computer Architecture and Organization
+\item Finite Automata and Formal Languages
+\item Database management systems
+\item Probability and Statistics
+\item Game theory and Economics
+
  \end{itemize}
  \end{multicols}
  \hfill * \textit{To be completed shortly}
@@ -161,7 +187,18 @@
 
 %----------POR-----------------Starts----------------
 \section{Positions of Responsibility}
+\resumeSubHeadingListStart
 
+\resumeSubItem{Worked as city representative, Technothlon 2019-20}
+{\vspace{-7pt}
+\begin{itemize}
+\item Spread awareness about Technothlon exam in a few schools and colleges in the neighborhood and conducted the exam for the candidates
+
+\end{itemize} }
+
+
+\vspace{-2pt}
+\resumeSubHeadingListEnd
 %----------POR-----------------Ends----------------
 
 
@@ -170,8 +207,12 @@
 
 %----------Achievements-----------------Starts----------------
 \section{Achievements}
+\resumeSubHeadingListStart
   
+\resumeSubItem{Aditya Birla Scholar 2019}{Aditya Birla Scholarship 2019
+}
 
+\resumeSubHeadingListEnd
 %----------Achievements-----------------Ends----------------
 
 
