--- a/latexFile.tex
+++ b/latexFile.tex
@@ -111,7 +111,7 @@
  \hline   \textbf{Degree/Certificate} & \textbf{Institute/Board} & \textbf{CGPA/Percentage} & \textbf{Year} \\
  
 \hline B.Tech& IITG& 9.3& 2023\\
-\hline Senior secondary& CBSE& 95& 2019\\
+\hline Senior secondary& CBSE& 95\%& 2019\\
 \hline Secondary& CBSE& 10& 2017\\
 
 \hline
