--- a/latexFile.tex
+++ b/latexFile.tex
@@ -85,15 +85,15 @@
 }
 \parbox{\dimexpr\linewidth-2.3cm\relax}{
 
-\textbf{\huge Gollapudi N Lakshmi Narayana}\\
+\textbf{\huge }\\
 \begin{tabular*}{\textwidth}{l@{\hskip 1.25cm}r}
 
 %\textbf
 
-{Roll No. 190101037}&\href{mailto:lakshminarayana822002@gmail.com}{ lakshminarayana822002@gmail.com}\\
-{B.Tech}& Mobile : +917416143007\\
-{Computer Science and Engineering}&\href{mailto:gn@iitg.ac.in}{ gn@iitg.ac.in}\\
-{IITG} & \href{https://www.linkedin.com/in/lakshmi-narayana-b04892194//}{https://www.linkedin.com/in/lakshmi-narayana-b04892194/}
+{Roll No. }&\href{mailto:}{ }\\
+{}& Mobile : \\
+{}&\href{mailto:}{ }\\
+{IITG} & \href{/}{}
 
 \end{tabular*}
 }
@@ -110,9 +110,9 @@
  \begin{tabu} to 1\textwidth { | X[c] | X[c] | X[c] | X[c]| }
  \hline   \textbf{Degree/Certificate} & \textbf{Institute/Board} & \textbf{CGPA/Percentage} & \textbf{Year} \\
  
-\hline B.Tech& IITG& 9.3& 2023\\
-\hline Senior secondary& CBSE& 95\%& 2019\\
-\hline Secondary& CBSE& 10& 2017\\
+\hline B.Tech& & & \\
+\hline Senior secondary& & & \\
+\hline Secondary& & & \\
 
 \hline
 \end{tabu}
@@ -125,17 +125,7 @@
 
 %----------Projects-----------------Starts----------------
 \section{Projects}
-\resumeSubHeadingListStart
-
-\resumeSubheading{OpenResumes}{Ongoing}{Student Web Community, IITG}{\href{https://github.com/Lakshmi116/OpenResumes}{\textit{\small https://github.com/Lakshmi116/OpenResumes   }}}
-\begin{itemize}
-\item A website to build resumes based on IIT Guwahati template.
-
- \end{itemize}
-\vspace{2pt}
-
   
-\resumeSubHeadingListEnd
 %----------Projects-----------------Ends----------------
 
 
@@ -145,18 +135,9 @@
 %----------Technical Skills-----------------Starts----------------
 \section{Technical Skills}
 
- \resumeSubHeadingListStart
- 
-\resumeSubItem{Programming Languages}{c++, python}
-\resumeSubItem{Web Technologies}{HTML, CSS, JavaScript}
-\resumeSubItem{DBMS}{MySQL}
-\resumeSubItem{OS}{Linux, Windows}
-\resumeSubItem{Miscelleneous}{AppD, WebD, Django}
-\resumeSubItem{Other Skills}{Machine Learning}
  
  \hfill * \textit{Elimentary Profficiency}
  
- \resumeSubHeadingListEnd
  %----------Technical Skills-----------------Ends----------------
  
  
@@ -169,13 +150,7 @@
  \begin{multicols}{2}
  \begin{itemize}[leftmargin = *,itemsep=-3pt]
 
-\item Data Structures and algorithms
-\item Computer Architecture and Organization
-\item Finite Automata and Formal Languages
-\item Database management systems
-\item Probability and Statistics
-\item Game theory and Economics
-
+\item null
  \end{itemize}
  \end{multicols}
  \hfill * \textit{To be completed shortly}
@@ -187,18 +162,7 @@
 
 %----------POR-----------------Starts----------------
 \section{Positions of Responsibility}
-\resumeSubHeadingListStart
 
-\resumeSubItem{Worked as city representative, Technothlon 2019-20}
-{\vspace{-7pt}
-\begin{itemize}
-\item Spread awareness about Technothlon exam in a few schools and colleges in the neighborhood and conducted the exam for the candidates
-
-\end{itemize} }
-
-
-\vspace{-2pt}
-\resumeSubHeadingListEnd
 %----------POR-----------------Ends----------------
 
 
@@ -207,12 +171,8 @@
 
 %----------Achievements-----------------Starts----------------
 \section{Achievements}
-\resumeSubHeadingListStart
   
-\resumeSubItem{Aditya Birla Scholar 2019}{Aditya Birla Scholarship 2019
-}
 
-\resumeSubHeadingListEnd
 %----------Achievements-----------------Ends----------------
 
 
